[gd_scene load_steps=4 format=3 uid="uid://dy4rdlxno3ecl"]

[ext_resource type="Script" path="res://Scenes/end_game.gd" id="1_byfow"]
[ext_resource type="Texture2D" uid="uid://d3p7lmkueavxi" path="res://Art/HUD/end_game_screen.png" id="2_grady"]
[ext_resource type="Texture2D" uid="uid://ch3ux6vvlgjq1" path="res://Art/HUD/launch_button.png" id="3_1rhtg"]

[node name="Scene" type="Node2D"]
script = ExtResource("1_byfow")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_grady")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShotsTaken" type="Label" parent="Control"]
layout_mode = 0
offset_left = 328.0
offset_top = -55.0
offset_right = 368.0
offset_bottom = -32.0

[node name="Tacos" type="Label" parent="Control"]
layout_mode = 0
offset_left = 286.0
offset_top = -111.0
offset_right = 326.0
offset_bottom = -88.0

[node name="MainMenuButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_top = 110.0
offset_right = 336.0
offset_bottom = 318.0
texture_normal = ExtResource("3_1rhtg")

[node name="ExitGameButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("3_1rhtg")

[connection signal="pressed" from="Control/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Control/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
